force-app/main/default/objects/CampaignMember/fields/Dual_Enrollment_Participation__c.field-meta.xml
<CustomField>
    <fullName>Dual_Enrollment_Participation__c</fullName>
    <label>Dual Enrollment Participation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (in program with 5th year of HS)</fullName>
            </value>
            <value>
                <fullName>Yes (in program WITHOUT 5th year of HS)</fullName>
            </value>
            <value>
                <fullName>No (not in a dual enrollment program)</fullName>
            </value>
            <value>
                <fullName>n/a (prior to 2012)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>