force-app/main/default/objects/CampaignMember/fields/Dual_Enrollment_Predip_Cred_Course_Com__c.field-meta.xml
<CustomField>
    <fullName>Dual_Enrollment_Predip_Cred_Course_Com__c</fullName>
    <inlineHelpText>Dual Enrollment: Pre-diploma Credentials or Coursework Completed.</inlineHelpText>
    <label>Dual Enroll: Pre-Diploma cred/course</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed dual-enroll Certificate</fullName>
            </value>
            <value>
                <fullName>Completed dual-enroll Assoc. degree</fullName>
            </value>
            <value>
                <fullName>College credit from dual enroll program</fullName>
            </value>
            <value>
                <fullName>Did not earn Assoc. or Bach. Degree</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>n/a (prior to 2012)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>