force-app/main/default/objects/CampaignMember/fields/Education_Status_at_End_Senior__c.field-meta.xml
<CustomField>
    <fullName>Education_Status_at_End_Senior__c</fullName>
    <label>Education Status at End (Senior)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grad in standard num yrs (non-rigorous)</fullName>
            </value>
            <value>
                <fullName>Grad in standard num yrs (rigorous)</fullName>
            </value>
            <value>
                <fullName>Grad in non-standard num yrs</fullName>
            </value>
            <value>
                <fullName>Received alt. credential</fullName>
            </value>
            <value>
                <fullName>Neither grad nor received alt. credential</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant) (UB)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Diploma/rigorous course of study (UB)</fullName>
            </value>
            <value>
                <fullName>Diploma/nonrigorous course of study (UB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>