force-app/main/default/objects/CampaignMember/fields/Educational_Status_at_Start_Adult__c.field-meta.xml
<CustomField>
    <fullName>Educational_Status_at_Start_Adult__c</fullName>
    <inlineHelpText>Educational status of participants over 19.</inlineHelpText>
    <label>Educational Status at Start (Adult)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1_Adult w/o Cred Alternative Ed</fullName>
            </value>
            <value>
                <fullName>A2_Adult w/o Cred NOT in A1 or A5</fullName>
            </value>
            <value>
                <fullName>A3_HS/GED Grad NOT in postsec</fullName>
            </value>
            <value>
                <fullName>A4_Adult w/Cred postsec dropout</fullName>
            </value>
            <value>
                <fullName>A5_Adult w/o HS Cred postsec dropout</fullName>
            </value>
            <value>
                <fullName>A6_Potential postsec transfer</fullName>
            </value>
            <value>
                <fullName>A7_Postsec student</fullName>
            </value>
            <value>
                <fullName>A8_Other</fullName>
            </value>
            <value>
                <fullName>A9_Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>