force-app/main/default/objects/CampaignMember/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <label>Employment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (at job arranged by project)</fullName>
            </value>
            <value>
                <fullName>Yes (student secured w/o assistance)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>