force-app/main/default/objects/CampaignMember/fields/Enrolled_in_PSE__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_PSE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolled in PSE?</label>
    <type>Checkbox</type>
</CustomField>