force-app/main/default/objects/CampaignMember/fields/Financial_Aid_App_Completion__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_App_Completion__c</fullName>
    <inlineHelpText>For EOC: this is APR Objective B.
For TS: this is APR Demographic Section F
For UB: this is APR Field 44.</inlineHelpText>
    <label>Financial Aid App Completion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sr. Completed FAFSA but did NOT Enroll in Postsec (TS)</fullName>
            </value>
            <value>
                <fullName>Sr. Completed FAFSA and enrolled in postsec</fullName>
            </value>
            <value>
                <fullName>Sr. Did NOT Complete FAFSA (TS/UB)</fullName>
            </value>
            <value>
                <fullName>n/a (did not complete HS this report yr)</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Sr. Completed FAFSA (UB)</fullName>
            </value>
            <value>
                <fullName>Completed Fin Aid App (EOC)</fullName>
            </value>
            <value>
                <fullName>Did NOT Complete Fin Aid App (EOC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>