force-app/main/default/objects/CampaignMember/fields/Goal_Sec_Grad_Rigor_Dashboard_support__c.field-meta.xml
<CustomField>
    <fullName>Goal_Sec_Grad_Rigor_Dashboard_support__c</fullName>
    <formula>ISPICKVAL(Contact.Intake_Location__c, &#39;UB Brockton&#39;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &#39;2017-2018&#39;) &amp;&amp;
Active__c = True &amp;&amp;
ISPICKVAL(Education_Status_at_End_Senior__c, &#39;Diploma/rigorous course of study (UB)&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal % Sec Grad Rigor Dashboard support</label>
    <type>Checkbox</type>
</CustomField>