force-app/main/default/objects/CampaignMember/fields/Goal_Secondary_Retention_and_Grad__c.field-meta.xml
<CustomField>
    <fullName>Goal_Secondary_Retention_and_Grad__c</fullName>
    <label>Goal % Secondary Retention and Grad</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>