force-app/main/default/objects/CampaignMember/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <label>GPA</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>