force-app/main/default/objects/CampaignMember/fields/Grade_Level_at_Next_Year_Start__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level_at_Next_Year_Start__c</fullName>
    <label>Grade Level at Start of NEXT Year (UB)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grade 9 (Freshman)</fullName>
            </value>
            <value>
                <fullName>Grade 10 (Sophomore)</fullName>
            </value>
            <value>
                <fullName>Grade 11 (Junior)</fullName>
            </value>
            <value>
                <fullName>Grade 12 (Senior)</fullName>
            </value>
            <value>
                <fullName>Enrolled in or completed postsec</fullName>
            </value>
            <value>
                <fullName>In 5th year of 5-year dual enrollment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>n/a (not enrolled in HS or postsec)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>