force-app/main/default/objects/CampaignMember/fields/Grade_Level_at_Start_Non_Adult__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level_at_Start_Non_Adult__c</fullName>
    <label>Grade Level at Start (Non-Adult)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grade 6-8 (Middle School)</fullName>
            </value>
            <value>
                <fullName>Grade 9 (Freshman)</fullName>
            </value>
            <value>
                <fullName>Grade 10 (Sophomore)</fullName>
            </value>
            <value>
                <fullName>Grade 11 (Junior)</fullName>
            </value>
            <value>
                <fullName>Grade 12 (Senior)</fullName>
            </value>
            <value>
                <fullName>In HS Equivalency or Alt. Non-Graded</fullName>
            </value>
            <value>
                <fullName>In 4th year of 5-year dual enrollment</fullName>
            </value>
            <value>
                <fullName>In 5th year of 5-year dual enrollment</fullName>
            </value>
            <value>
                <fullName>Secondary School dropout</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Enrolled in or completed postsec (UB)</fullName>
            </value>
            <value>
                <fullName>n/a (did not enroll in HS or postsec) (UB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>