force-app/main/default/objects/CampaignMember/fields/HS_Cumulative_Unweighted_GPA_at_EOAY__c.field-meta.xml
<CustomField>
    <fullName>HS_Cumulative_Unweighted_GPA_at_EOAY__c</fullName>
    <inlineHelpText>High School Cumulative Unweighted Grade Point Average (GPA), at end of academic year, being reported.</inlineHelpText>
    <label>HS Cumulative Unweighted GPA at EOAY</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>