force-app/main/default/objects/CampaignMember/fields/HS_Graduation_End_Status__c.field-meta.xml
<CustomField>
    <fullName>HS_Graduation_End_Status__c</fullName>
    <label>HS Graduation End Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currently enrolled in High School</fullName>
            </value>
            <value>
                <fullName>High School dropout</fullName>
            </value>
            <value>
                <fullName>Received regular secondary school diploma</fullName>
            </value>
            <value>
                <fullName>Received HS equivalency (e.g., GED)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Completed 12th gr but failed to graduate</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>