force-app/main/default/objects/CampaignMember/fields/Instruction_Tutorial_for_LEP_FRY__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Tutorial_for_LEP_FRY__c</fullName>
    <inlineHelpText>Instruction/Tutorial for Students with Limited English Proficiency, for reporting year.</inlineHelpText>
    <label>Instruction/Tutorial for LEP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a (not offered)</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>