force-app/main/default/objects/CampaignMember/fields/Is_College_Ready__c.field-meta.xml
<CustomField>
    <fullName>Is_College_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is College Ready</label>
    <type>Checkbox</type>
</CustomField>