force-app/main/default/objects/CampaignMember/fields/Met_State_Math__c.field-meta.xml
<CustomField>
    <fullName>Met_State_Math__c</fullName>
    <label>Met State-Math</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>