force-app/main/default/objects/CampaignMember/fields/Obj_A_Secondary_School_Diploma__c.field-meta.xml
<CustomField>
    <fullName>Obj_A_Secondary_School_Diploma__c</fullName>
    <label>Obj A Secondary School Diploma</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rec&#39;d secondary school diploma/equiv.</fullName>
            </value>
            <value>
                <fullName>Enrolled alt. program, not completed</fullName>
            </value>
            <value>
                <fullName>Enrolled HS, not completed</fullName>
            </value>
            <value>
                <fullName>Not enrolled HS or alt. program</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>