force-app/main/default/objects/CampaignMember/fields/Obj_C_Post_Secondary_Ed_Admissions__c.field-meta.xml
<CustomField>
    <fullName>Obj_C_Post_Secondary_Ed_Admissions__c</fullName>
    <label>Obj C - Post Secondary Ed Admissions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Did Not Apply</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>