force-app/main/default/objects/CampaignMember/fields/Other_School__c.field-meta.xml
<CustomField>
    <fullName>Other_School__c</fullName>
    <label>Other School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>