force-app/main/default/objects/CampaignMember/fields/Participant_Status__c.field-meta.xml
<CustomField>
    <fullName>Participant_Status__c</fullName>
    <label>Participant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Continuing</fullName>
            </value>
            <value>
                <fullName>Reentry, previously served (UB)</fullName>
            </value>
            <value>
                <fullName>Prior-year (UB)</fullName>
            </value>
            <value>
                <fullName>Transfer (UB/UBMS served by another UB/UBMS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>