force-app/main/default/objects/CampaignMember/fields/Participation_Level_for_Reporting_Year__c.field-meta.xml
<CustomField>
    <fullName>Participation_Level_for_Reporting_Year__c</fullName>
    <label>Participation Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic year and summer components</fullName>
            </value>
            <value>
                <fullName>Academic year and summer bridge</fullName>
            </value>
            <value>
                <fullName>Academic year component only</fullName>
            </value>
            <value>
                <fullName>Summer component only</fullName>
            </value>
            <value>
                <fullName>Summer bridge only</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>