force-app/main/default/objects/CampaignMember/fields/Post_Secondary_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Post_Secondary_Enrollment_Status__c</fullName>
    <label>Post Secondary Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled or Deferred PSE (TS)</fullName>
            </value>
            <value>
                <fullName>Earned sec diploma &amp; deferred PSE (UB)</fullName>
            </value>
            <value>
                <fullName>Earned sec diploma &amp; unknown PSE (UB)</fullName>
            </value>
            <value>
                <fullName>Earned sec dipl. &amp; enrolled PSE (UB/EOC)</fullName>
            </value>
            <value>
                <fullName>Did NOT enroll in PSE (EOC)</fullName>
            </value>
            <value>
                <fullName>Had sec diploma &amp; enrolled PSE</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>n/a (all other current/prior) (UB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>