force-app/main/default/objects/CampaignMember/fields/Post_Secondary_Placement__c.field-meta.xml
<CustomField>
    <fullName>Post_Secondary_Placement__c</fullName>
    <label>Post Secondary Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public 2-yr Institution</fullName>
            </value>
            <value>
                <fullName>Private 2-yr Institution</fullName>
            </value>
            <value>
                <fullName>Public 4-yr Institution</fullName>
            </value>
            <value>
                <fullName>Private 4-yr Institution</fullName>
            </value>
            <value>
                <fullName>Vocational/trade Institution</fullName>
            </value>
            <value>
                <fullName>Proprietary School</fullName>
            </value>
            <value>
                <fullName>Unknown Institution</fullName>
            </value>
            <value>
                <fullName>Private non-profit 2-yr Institution</fullName>
            </value>
            <value>
                <fullName>Private non-profit 4-yr Institution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>