force-app/main/default/objects/CampaignMember/fields/Post_Secondary_Remediation__c.field-meta.xml
<CustomField>
    <fullName>Post_Secondary_Remediation__c</fullName>
    <label>Post Secondary Remediation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Remediation</fullName>
            </value>
            <value>
                <fullName>Yes, Received Remediation</fullName>
            </value>
            <value>
                <fullName>n/a not in post secondary ed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>