force-app/main/default/objects/CampaignMember/fields/Post_Secondary_School__c.field-meta.xml
<CustomField>
    <fullName>Post_Secondary_School__c</fullName>
    <label>Post Secondary School</label>
    <length>100</length>
    <type>Text</type>
</CustomField>