force-app/main/default/objects/CampaignMember/fields/Postsecondary_Attainment_Completion__c.field-meta.xml
<CustomField>
    <fullName>Postsecondary_Attainment_Completion__c</fullName>
    <inlineHelpText>Post Secondary Attainment (TS Obj. E)/Completion(UB) Objective - Numerator, for reporting year (UB and TS).</inlineHelpText>
    <label>Postsecondary Attainment/Completion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (Cert. only, 6 yrs after HS grad)</fullName>
            </value>
            <value>
                <fullName>Yes (Assoc. Degree, 6 yrs after HS grad)</fullName>
            </value>
            <value>
                <fullName>Yes (Bach. Degree, 6 yrs after HS grad)</fullName>
            </value>
            <value>
                <fullName>Yes (Assoc. AND Bach., 6 yrs after HS)</fullName>
            </value>
            <value>
                <fullName>Yes (Assoc. OR Bach., 6 yrs after HS) (UB)</fullName>
            </value>
            <value>
                <fullName>Yes (Multi-cred (other), 6 yrs after HS)</fullName>
            </value>
            <value>
                <fullName>No (No cert or degree, 6 yrs after HS)</fullName>
            </value>
            <value>
                <fullName>n/a (is not 6 yrs after HS grad)</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>