force-app/main/default/objects/CampaignMember/fields/Reason_for_Leaving_Project__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Leaving_Project__c</fullName>
    <label>Reason for Leaving Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need or desire for employment</fullName>
            </value>
            <value>
                <fullName>Moved out of target area</fullName>
            </value>
            <value>
                <fullName>Dropped out of high school</fullName>
            </value>
            <value>
                <fullName>Other extra-curricular activities</fullName>
            </value>
            <value>
                <fullName>Other program (non-UB/UBMS)</fullName>
            </value>
            <value>
                <fullName>No longer interested in the program</fullName>
            </value>
            <value>
                <fullName>Family responsibilities</fullName>
            </value>
            <value>
                <fullName>Graduated from high school</fullName>
            </value>
            <value>
                <fullName>No longer used</fullName>
            </value>
            <value>
                <fullName>Obtained GED</fullName>
            </value>
            <value>
                <fullName>Deceased or permanently incapacitated</fullName>
            </value>
            <value>
                <fullName>Dismissed (academic standards)</fullName>
            </value>
            <value>
                <fullName>Dismissed (conduct standards)</fullName>
            </value>
            <value>
                <fullName>Transferred to other UB/UBMS project</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>n/a (is still in program)</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>