force-app/main/default/objects/CampaignMember/fields/Reported__c.field-meta.xml
<CustomField>
    <fullName>Reported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should NOT be used!  See SFD-58.</description>
    <inlineHelpText>This field should NOT be used!  See SFD-58.</inlineHelpText>
    <label>Reported Value Imported From Blumen</label>
    <type>Checkbox</type>
</CustomField>