force-app/main/default/objects/CampaignMember/fields/Rigorous_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Rigorous_Enrollment__c</fullName>
    <label>Rigorous Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid with TS grant funds</fullName>
            </value>
            <value>
                <fullName>Provided in school with no cost to TS</fullName>
            </value>
            <value>
                <fullName>Provided by partner at no cost to TS</fullName>
            </value>
            <value>
                <fullName>Received third-party tuition waivers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>