force-app/main/default/objects/CampaignMember/fields/Secondary_School__c.field-meta.xml
<CustomField>
    <fullName>Secondary_School__c</fullName>
    <label>Secondary School</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abington High School</fullName>
            </value>
            <value>
                <fullName>Attleboro High School</fullName>
            </value>
            <value>
                <fullName>Avon High School</fullName>
            </value>
            <value>
                <fullName>Blue Hills Regional High School</fullName>
            </value>
            <value>
                <fullName>Boston Latin Academy</fullName>
            </value>
            <value>
                <fullName>Breed Middle School</fullName>
            </value>
            <value>
                <fullName>Bridgewater-Raynham Regional High School</fullName>
            </value>
            <value>
                <fullName>Brighton High School</fullName>
            </value>
            <value>
                <fullName>Brockton High School</fullName>
            </value>
            <value>
                <fullName>Brook Farm Business and Service Career</fullName>
            </value>
            <value>
                <fullName>Brookline High School</fullName>
            </value>
            <value>
                <fullName>Canton High School</fullName>
            </value>
            <value>
                <fullName>Cardinal Spellman High School</fullName>
            </value>
            <value>
                <fullName>Career Development Center School</fullName>
            </value>
            <value>
                <fullName>Charlestown High School</fullName>
            </value>
            <value>
                <fullName>Community Academy of Science &amp; Health (CASH)</fullName>
            </value>
            <value>
                <fullName>Dorchester High School</fullName>
            </value>
            <value>
                <fullName>East Boston High School</fullName>
            </value>
            <value>
                <fullName>English High School</fullName>
            </value>
            <value>
                <fullName>Everett High School</fullName>
            </value>
            <value>
                <fullName>Jeremiah Burke High School</fullName>
            </value>
            <value>
                <fullName>Lynn Alternative High School</fullName>
            </value>
            <value>
                <fullName>Lynn Classical High School</fullName>
            </value>
            <value>
                <fullName>Lynn English High School</fullName>
            </value>
            <value>
                <fullName>Lynn Vocational Technical Institute School</fullName>
            </value>
            <value>
                <fullName>Madison Park High School</fullName>
            </value>
            <value>
                <fullName>Mario Umana Academy</fullName>
            </value>
            <value>
                <fullName>Mary Lyon High School</fullName>
            </value>
            <value>
                <fullName>Medford High School</fullName>
            </value>
            <value>
                <fullName>Media Communications Technology High School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>