force-app/main/default/objects/CampaignMember/fields/Secondary_School_Dual_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_School_Dual_Enrollment__c</fullName>
    <label>Secondary School Dual Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (TS)</fullName>
            </value>
            <value>
                <fullName>No (school does not offer) (TS)</fullName>
            </value>
            <value>
                <fullName>No (school offers) (TS)</fullName>
            </value>
            <value>
                <fullName>Yes (program w 5th year of HS) (UB)</fullName>
            </value>
            <value>
                <fullName>Yes (program w/o 5th year of HS) (UB)</fullName>
            </value>
            <value>
                <fullName>No (UB)</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant) (UB)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>