force-app/main/default/objects/CampaignMember/fields/Secondary_School_Persistence__c.field-meta.xml
<CustomField>
    <fullName>Secondary_School_Persistence__c</fullName>
    <label>Secondary School Persistence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Persisted at next grade or graduated HS</fullName>
            </value>
            <value>
                <fullName>Persisted at same grade</fullName>
            </value>
            <value>
                <fullName>Dropped out of school</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>