force-app/main/default/objects/CampaignMember/fields/Served__c.field-meta.xml
<CustomField>
    <fullName>Served__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Served</label>
    <type>Checkbox</type>
</CustomField>