force-app/main/default/objects/CampaignMember/fields/Served_by_Other_Trio__c.field-meta.xml
<CustomField>
    <fullName>Served_by_Other_Trio__c</fullName>
    <label>Served by Other Trio/fed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upward Bound (UB)</fullName>
            </value>
            <value>
                <fullName>Upward Bound Math-Science (UBMS)</fullName>
            </value>
            <value>
                <fullName>Veterans Upward Bound (VUB)</fullName>
            </value>
            <value>
                <fullName>Educational Opportunity Centers (EOC)</fullName>
            </value>
            <value>
                <fullName>Gear Up</fullName>
            </value>
            <value>
                <fullName>Talent Search (TS)</fullName>
            </value>
            <value>
                <fullName>Student Support Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Served by &gt; 1 fed funded program</fullName>
            </value>
            <value>
                <fullName>n/a (not served by other Trio/Fed)</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>n/a (prior participant) (UB)</fullName>
            </value>
            <value>
                <fullName>No response/Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>